@@ -174,6 +174,12 @@ def left_align(widget):
     align = gtk.Alignment(0, 0.5)
     align.add(widget)
     return align
+
+def right_align(widget):
+    import gtk
+    align = gtk.Alignment(1, 0.5)
+    align.add(widget)
+    return align
     
 def label_left_align(string):
     import gtk
