@@ -1,3 +1,7 @@
+2010-04-17 Homer Xing <homer.xing@gmail.com>
+
+    * Add "Contributing to Ailurus" dialog in "Others" menu. 
+
 2010-04-16 Homer Xing <homer.xing@gmail.com>
 
     * Implement "Fastest repository" pane for Fedora.
